2011-07-21  Gavin Peters  <gavinp@chromium.org>

        Extend the protector of a CSS style sheet.  Because checkLoaded() can recursively delete
        parent style elements, the protector should be extended to include the parent call.

        https://bugs.webkit.org/show_bug.cgi?id=64736

        Reviewed by Simon Fraser.

        * fast/css/css-imports-2-expected.txt: Added.
        * fast/css/css-imports-2.html: Added.

2011-07-20  Tony Chang  <tony@chromium.org>

        Stale pointer due to floats not removed (flexible box display)
        https://bugs.webkit.org/show_bug.cgi?id=64603

        Reviewed by David Hyatt.

        * fast/flexbox/horizontal-box-float-crash-expected.txt: Added.
        * fast/flexbox/horizontal-box-float-crash.html: Added.

2011-07-16  Sergey Glazunov  <serg.glazunov@gmail.com>

        DOMWindow::open performs a security check on a wrong window
        https://bugs.webkit.org/show_bug.cgi?id=64651

        Reviewed by Adam Barth.

        * http/tests/security/resources/xss-DENIED-window-open-parent-attacker.html: Added.
        * http/tests/security/xss-DENIED-window-open-parent-expected.txt: Added.
        * http/tests/security/xss-DENIED-window-open-parent.html: Added.

2011-07-14  Adam Barth  <abarth@webkit.org>

        The beforeload event allows tracking URI changes in a frame
        https://bugs.webkit.org/show_bug.cgi?id=64482

        Reviewed by Nate Chapin.

        Test whether the beforeload event is fired for various kinds of redirects.

        * http/tests/security/beforeload-iframe-client-redirect-expected.txt: Added.
        * http/tests/security/beforeload-iframe-client-redirect.html: Added.
        * http/tests/security/beforeload-iframe-server-redirect-expected.txt: Added.
        * http/tests/security/beforeload-iframe-server-redirect.html: Added.
        * http/tests/security/resources/post-done.html: Added.
        * http/tests/security/resources/client-redir.html: Added.
