@@ -1,3 +1,15 @@
+2011-07-19  Abhishek Arya  <inferno@chromium.org>
+
+        Crash when removing unrenderered nodes in replacement fragment.
+        https://bugs.webkit.org/show_bug.cgi?id=64801
+
+        Reviewed by Ryosuke Niwa.
+
+        Test: editing/pasteboard/replacement-fragment-remove-unrendered-node-crash.html
+
+        * editing/ReplaceSelectionCommand.cpp:
+        (WebCore::ReplacementFragment::removeUnrenderedNodes):
+
 2011-07-21  Gavin Peters  <gavinp@chromium.org>
 
         Extend the protector of a CSS style sheet.  Because checkLoaded() can recursively delete
